# FIT_PROJECTS

./: .gitignore  .gitmodules  README.md
IAL/: README.md
IAL/IAL_DU1/c202/: c202-test  c202.c
IAL/IAL_DU1/c204/: c204-test  c204.c  current-test.out
IAL/IAL_DU1/c206/: c206-test  c206.c
IAL/IAL_DU2/hashtable/: Makefile  a.out  hashtable.c  test
IJA/ija/: build.gradle.kts  settings.gradle.kts
IMP/: platformio.ini
IMP/research/: knob.html  server_example.cpp  servo_example.cpp  stepper_example.cpp
IMP/src/: main.cpp
IMS/: info.txt
IMS/doc/: main.tex
IMS/research/: test.html
IMS/src/: main.cpp
IPK/ipk_1/: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml
IPK/ipk_1/src/: arp.cpp  console_utils.cpp  icmp.cpp  icmpv6.cpp  main.cpp  ndp.cpp  network_utils.cpp  output.cpp  polling.cpp
IPK/ipk_2/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
IPK/ipk_2/include/: ArgumentParser.hpp  ConnectionClient.hpp  MessageParsing.hpp  TCPClient.hpp  UDPClient.hpp  userInput.hpp
IPK/ipk_2/src/: ArgumentParser.cpp  ConnectionClient.cpp  MessageParsing.cpp  TCPClient.cpp  UDPClient.cpp  main.cpp  userInput.cpp
IPP/: parse.py  readme1.md
IPP/docs/: automat.md
IPP/ipp-core/: .php-cs-fixer.dist.php  Makefile  architecture.md  basic_int.xml  composer.json  print.xml  read.xml  test_by_one.xml
IPP/src/: lexer.py  parser.out  parser.py  parsetab.py  semantic_analyzer.py
IPP/tests/: lexer_string_test.py  lexer_tests.py  parser_test_chain.py  parser_test_main.py  parser_test_parameter.py  parser_test_paren.py  parser_test_simple.py  semantic_arity_test.py  semantic_block_test.py  semantic_instance_test.py  semantic_paren_test.py  semantic_reference_test.py  semantic_test.py  semantic_while_test.py
ISA/isa-top/: CMakeLists.txt  Makefile  README.md  isa-top
ISA/isa-top/.cache/clangd/index/: display.cpp.8CF4D956F876BC9D.idx  display.h.7388DDC41D20E411.idx  main.cpp.2BC2B9169A3D0A92.idx  packetcapture.cpp.0391FC27A6155933.idx  packetcapture.h.601497CBEFF6D4E2.idx  stats.cpp.5A9812949D5BEA7B.idx  stats.h.3EDAB541E2FEE336.idx  utils.cpp.BDB32F8B139AE0CF.idx  utils.h.407444FDEC25D306.idx
ISA/isa-top/src/: display.cpp  main.cpp  packetcapture.cpp  stats.cpp  utils.cpp
ISA/isa-top/src/include/: display.h  packetcapture.h  stats.h  utils.h
ISA/isa-top/tests/: test_main.cpp  test_stats.cpp
ITU/Ajax/: itu-ajax.html
ITU/Qt-cviceni/: main.cpp
IZP/project_2/: README.md  single_linkage.c
IZV/: test25.ipynb
IZV/izv-part01/: .gitignore  part01.py  pyproject.toml  test_part01.py  v2.py
IZV/izv-part01/site_files/: addon.css  aim_isko_mapa.css  aim_isko_mapa.js  calendar-cs.js  calendar-setup.js  calendar.js  chmu.css  chmu.js  common.js  cookie.css  cookie.js  encoding-indexes.js  fatwire.css  header-builder.js  iclidata-full-css.css  jquery-ui.css  main.css  non-homepage.css  portlet.css  print.css  reset.css  user.css
IZV/izv-part02/: .gitignore  analysis.py  pyproject.toml
IZV/izv-part02/data_23_25/2025/: Ichodci.xls
IZV/izv-part03-var-nehody/: .gitignore  doc.py  geo.py  pyproject.toml  stat.ipynb
(+143 files in other folders)
