[project]
name = "izv-part03-var-nehody"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
ignore = ["F403", "E501", "PLR0913"]
# Enable rulesets
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "D", # pydocstyle
    "UP", # pyupgrade
    "C90", # mccabe complexity
    "TID", # tidy imports
    "PL", # pylint (partial)
    "SIM", # simplify
    "PT", # pytest
    "B", # bugbear
    "A", # builtins
    "DTZ", # datetime
    "TCH",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
follow_imports = "normal"
show_error_codes = true
pretty = true
